--- a/main-styles.css
+++ b/main-styles.css
@@ -1,45 +1,82 @@
 * {
-   box-sizing: border-box;
-   margin: 0;
-   padding: 0;
- }
+box-sizing: border-box;
+margin: 0;
+padding: 0;
+}
 
- body {
-   font-family: sans-serif;
-   background-color: #121212;
-   height: 100vh;
-   overflow: hidden;
+body {
+font-family: sans-serif;
+background-color: #121212;
+height: 100vh;
+overflow: hidden;
+display: flex;
+flex-direction: column;
+}
+
+/* Headeri ja Footer vahel olevad elemendid */
+.main {
+flex-grow: 1;
+background-color: black;
+display: flex;
+justify-content: center;
+align-items: center;
+overflow: hidden;
+position: relative;
+}
+.box-container {
+width: 300px;
+height: 300px;
+position: relative;
+display: flex;
+flex-direction: column; 
+}
+
+.box-half {
+width: 100%;
+height: 50%;
+transition: transform 1s ease;
+}
+.box-container.open .box-top {
+transform: translateY(-100%);
+}
+
+.box-container.open .box-bottom {
+transform: translateY(100%);
+}
+
+.box-content {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   padding: 10px;
    display: flex;
    flex-direction: column;
- }
-
- /* Headeri ja Footer vahel olevad elemendid */
- .main {
-   flex-grow: 1;
-   background-color: black;
-   display: flex;
+   gap: 10px;
    justify-content: center;
    align-items: center;
-   overflow: hidden;
-   position: relative;
+   opacity: 0;
+   transform: translateY(20px);
+   transition: opacity 0.2s ease, transform 0.2s ease;
+   pointer-events: none;
+   z-index: 2;
  }
-.box-container {
-   width: 300px;
-   height: 300px;
-   position: relative;
-   display: flex;
-   flex-direction: column; 
+/* embeddide animatsioon ja paigutus */
+ .box-container.open .box-content {
+   opacity: 1;
+   transform: translateY(0);
+   pointer-events: auto;
+   transition: opacity 0.6s ease 0.4s, transform 0.6s ease 0.4s;
  }
  
- .box-half {
+ .box-content iframe {
    width: 100%;
-   height: 50%;
-   transition: transform 1s ease;
+   height: 100px; 
+   border-radius: 10px;
+   margin-left: 30px;
  }
- .box-container.open .box-top {
-   transform: translateY(-100%);
- }
- 
- .box-container.open .box-bottom {
-   transform: translateY(100%);
+ .spotify-wrapper {
+   margin-top: 30px;
+   margin-bottom: 20px; 
  }
