--- a/headerfooter.sass
+++ b/headerfooter.sass
@@ -58,6 +58,7 @@ header
   border-radius: 50%
   position: absolute
   transition: transform 0.3s ease
+  z-index: 1
 
   &.top
     top: -200px
@@ -194,6 +195,7 @@ $transition-duration: 0.3s
   border-radius: 20%
   position: absolute
   transition: transform $transition-duration ease
+  z-index: 1
 
   &.top
     top: -300px
