--- a/headerfooter.css
+++ b/headerfooter.css
@@ -27,6 +27,19 @@ header .header-text {
   z-index: 12;
 }
 
+.header-top {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 5px;
+  z-index: 12;
+}
+
+.header-logo {
+  width: 30px;
+  height: 30px;
+}
+
 .arrow-button {
   background: none;
   border: none;
