--- a/headerfooter.sass
+++ b/headerfooter.sass
@@ -24,6 +24,16 @@ header
     font-size: 24px
     font-weight: bold
     z-index: 12
+.header-top
+  display: flex
+  align-items: center
+  gap: 10px
+  margin-top: 5px
+  z-index: 12
+
+.header-logo
+  width: 30px
+  height: 30px
 
 .arrow-button
   background: none
