--- a/headerfooter.sass
+++ b/headerfooter.sass
@@ -150,7 +150,9 @@ footer
   display: none
   flex-direction: column
   gap: 15px
-  margin-top: 0
+  margin-bottom: 20px
+  margin-top: 0px
+
   z-index: 10
 
   .Sign_up-item
@@ -191,3 +193,15 @@ footer
 
   &.moved
     bottom: -250px
+
+.feedback-link
+  display: none
+  color: white
+  text-decoration: none
+  font-size: 16px
+  transition: opacity 0.3s ease
+  margin-top: 10px
+
+  &.visible
+    display: inline-block
+    opacity: 1
