--- a/main-styles.sass
+++ b/main-styles.sass
@@ -11,7 +11,7 @@ body
   display: flex
   flex-direction: column
 
-// Headeri ja Footer vahel olevad elemendid
+// Headeri ja Footer vahel olevad noodikast
 .main
   flex-grow: 1
   background-color: black
@@ -33,7 +33,7 @@ body
   width: 100%
   height: 50%
   transition: transform 1s ease
-
+//Muusika noodi animatsioon, liigutab ülemist üles ja alumist alla
 .box-container.open
   .box-top
     transform: translateY(-100%)
@@ -41,6 +41,7 @@ body
   .box-bottom
     transform: translateY(100%)
 
+// embeddide animatsioon ja paigutus
 .box-content
   position: absolute
   top: 0
@@ -59,14 +60,14 @@ body
   pointer-events: none
   z-index: 2
 
-// embeddide animatsioon ja paigutus
+
 .box-container.open
   .box-content
     opacity: 1
     transform: translateY(0)
     pointer-events: auto
     transition: opacity 0.6s ease 0.4s, transform 0.6s ease 0.4s
-
+//Iga spotify elemendi jaoks
 .box-content iframe
   width: 100%
   height: 100px
