--- a/headerfooter.sass
+++ b/headerfooter.sass
@@ -205,3 +205,15 @@ footer //footers paigutus
   &.visible
     display: inline-block
     opacity: 1
+
+.aboutUs-link //about us lingi paigutus, suurus,  nähtavus, värvus
+  display: none
+  color: white
+  text-decoration: none
+  font-size: 16px
+  transition: opacity 0.3s ease
+  margin-bottom: 10px
+
+  &.visible
+    display: inline-block
+    opacity: 1
